--- a/lib/conf/conf.properties
+++ b/lib/conf/conf.properties
@@ -1,15 +1,33 @@
 # configuration file for any class inherited from App using the classes in this library
 # 
-base    ..  #the directory where the data is found (in this case, one level above this directory)
-appname test
+include base    #this brings in a config object named base, which should be loaded from a file named base.conf
 
-bg          ff0000      #background color is red
-fg          000000      #foreground color is black
-font        "Times"     #default font family for the entire application is Times
-fontSize    12          #default size for the font in app
+define root # the name of the object, which is a hash containing symbols on each line with their corresponding values
+    base    ..  #the directory where the data is found (in this case, one level above this directory)
+    appname test
 
+    bg          ff0000      #background color is red
+    fg          000000      #foreground color is black
+    font        "Times"     #default font family for the entire application is Times
+    fontSize    12          #default size for the font in app
+    language    en
+end
+
+define local extends root   #inheritance means copy every definition from root into this one and override if necessary
 #TODO: menu configuration
 
 #potentially large list of buttons, each with a corresponding action and ImageIcon
 toolbar     "rotateRight", "rotateLeft", "left", "right"
+
+define menu mainmenu
+    FILE    NEW     OPEN    SAVE    SAVEAS  QUIT
+    EDIT    COPY    CUT     PASTE
+    HELP    ABOUT   DOCS
+end
+
+regex
+    name    [a-zA-Z][a-zA-Z0-9_]*
+    uint    \d+
+    int     \-?\d+
+end
 
