renamed to correct style name.conf

--- a/lib/conf/sample.conf
+++ b/lib/conf/sample.conf
@@ -14,12 +14,15 @@ define root # the name of the object, which is a hash containing symbols on each
 end
 
 define local extends root   #inheritance means copy every definition from root into this one and override if necessary
+    
+
+end
 #TODO: menu configuration
 
 #potentially large list of buttons, each with a corresponding action and ImageIcon
 toolbar     "rotateRight", "rotateLeft", "left", "right"
 
-define menu mainmenu
+menu mainmenu
     FILE    NEW     OPEN    SAVE    SAVEAS  QUIT
     EDIT    COPY    CUT     PASTE
     HELP    ABOUT   DOCS
