--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ hs_err_pid*
 /EE552/src/Session12/build/
 /EE552/src/Session12/nbproject/private/
 /EE552/src/Session13/nbproject/private/
+/EE552/nbproject/InClass/nbproject/private/
+/EE552/nbproject/InClass/build/
