removed private directories

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ hs_err_pid*
 *~
 lib/build/
 /EE552/nbproject/private/
+/Errors/nbproject/private/
 /Netbeans/Drawing/nbproject/private/
 /Netbeans/Session10/build/
 /Netbeans/Session10/nbproject/private/
