moved session03 into a package.  Worked on session04 problems and library code

--- a/lib/conf/sample.conf
+++ b/lib/conf/sample.conf
@@ -20,7 +20,9 @@ end
 #TODO: menu configuration
 
 #potentially large list of buttons, each with a corresponding action and ImageIcon
-toolbar     "rotateRight", "rotateLeft", "left", "right"
+toolbar tb
+     rotateRight    rotateLeft  left    right"
+end
 
 menu mainmenu
     FILE    NEW     OPEN    SAVE    SAVEAS  QUIT
@@ -28,7 +30,7 @@ menu mainmenu
     HELP    ABOUT   DOCS
 end
 
-regex
+regex p1
     name    [a-zA-Z][a-zA-Z0-9_]*
     uint    \d+
     int     \-?\d+
