--- a/lib/conf/sample.conf
+++ b/lib/conf/sample.conf
@@ -10,7 +10,20 @@ define root # the name of the object, which is a hash containing symbols on each
     fg          000000      #foreground color is black
     font        "Times"     #default font family for the entire application is Times
     fontSize    12          #default size for the font in app
-    language    en
+    language    "en"
+    name        /[a-zA-Z][a-zA-Z0-9_]*/
+    uint        /\d+/
+    int         /\-?\d+/
+    regex       m"/.*/"
+    pi          3.14159265358979
+    Na          6.022140857e+23
+    list        [1,2,3,4,5]
+    list2       ["a", "abc", "testing"]
+    list3       [
+                    ["FILE", "NEW", "OPEN","SAVE", "SAVEAS", "QUIT"],
+                    ["EDIT", "COPY", "CUT", "PASTE"],
+                    ["HELP", "ABOUT", "DOCS"]
+                ]
 end
 
 define local extends root   #inheritance means copy every definition from root into this one and override if necessary
@@ -21,7 +34,7 @@ end
 
 #potentially large list of buttons, each with a corresponding action and ImageIcon
 toolbar tb
-     rotateRight    rotateLeft  left    right"
+     rotateRight    rotateLeft  left    right
 end
 
 menu mainmenu
@@ -29,10 +42,3 @@ menu mainmenu
     EDIT    COPY    CUT     PASTE
     HELP    ABOUT   DOCS
 end
-
-regex p1
-    name    [a-zA-Z][a-zA-Z0-9_]*
-    uint    \d+
-    int     \-?\d+
-end
-
