--- a/lib/conf/sample.conf
+++ b/lib/conf/sample.conf
@@ -4,10 +4,9 @@ include base    #this brings in a config object named base, which should be load
 
 define root # the name of the object, which is a hash containing symbols on each line with their corresponding values
     base    ..  #the directory where the data is found (in this case, one level above this directory)
-    appname test
-
-    bg          ff0000      #background color is red
-    fg          000000      #foreground color is black
+    appname     "test"
+    bg          C=ff0000      #background color is red
+    fg          C=000000      #foreground color is black
     font        "Times"     #default font family for the entire application is Times
     fontSize    12          #default size for the font in app
     language    "en"
@@ -17,12 +16,21 @@ define root # the name of the object, which is a hash containing symbols on each
     regex       m"/.*/"
     pi          3.14159265358979
     Na          6.022140857e+23
+    G           6.67408e-11
     list        [1,2,3,4,5]
     list2       ["a", "abc", "testing"]
     list3       [
                     ["FILE", "NEW", "OPEN","SAVE", "SAVEAS", "QUIT"],
                     ["EDIT", "COPY", "CUT", "PASTE"],
                     ["HELP", "ABOUT", "DOCS"]
+                ]
+    main        menu [
+                    FILE    NEW     OPEN    SAVE    SAVEAS  QUIT
+                    EDIT    COPY    CUT     PASTE
+                    HELP    ABOUT   DOCS
+                ]
+    tb          toolbar [
+
                 ]
 end
 
