session09 all class types, review of java beans

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ lib/build/
 /EE552/src/Session13/nbproject/private/
 /EE552/nbproject/InClass/nbproject/private/
 /EE552/nbproject/InClass/build/
+/EE552/Session08/nbproject/private/
+/EE552/Session08/build/
