session03.  Your homework files are in here

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ lib/build/
 /opengl/JavaOpenGL/nbproject/private/
 /opengl/JavaOpenGL/build/
 /EE552/nbproject/ProcessingStreamline/nbproject/private/
+/InClassProjects2018F/nbproject/private/
+/InClassProjects2018F/build/
