added homework dir

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ lib/build/
 /EE552/nbproject/InClass/build/
 /EE552/Session08/nbproject/private/
 /EE552/Session08/build/
+/language/Language/nbproject/private/
+/language/Language/build/
+/language/Hello/nbproject/private/
+/language/Hello/build/
