--- a/gutil/gutil/nbproject/private/private.properties
+++ b/gutil/gutil/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\dkruger\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/dkruger/.netbeans/dev/build.properties
