--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ lib/build/
 /EE552/nbproject/ProcessingStreamline/nbproject/private/
 /InClassProjects2018F/nbproject/private/
 /InClassProjects2018F/build/
+/WebDev/WebDevelopment/nbproject/private/
+/WebDev/WebDevelopment/build/
