session06 - abstract classes and polymorphism

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ lib/build/
 /InClassProjects2018F/build/
 /WebDev/WebDevelopment/nbproject/private/
 /WebDev/WebDevelopment/build/
+/InClassProjets2019S/nbproject/private/
+/InClassProjets2019S/build/
