class class review

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ lib/build/
 /WebDev/WebDevelopment/build/
 /InClassProjets2019S/nbproject/private/
 /InClassProjets2019S/build/
+/WebDev2019S/Session13/nbproject/private/
+/WebDev2019S/Session13/build/
