--- a/CPE552InClass2019F/nbproject/project.properties
+++ b/CPE552InClass2019F/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=CPE552InClass2019F
+application.vendor=dkruger
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,45 @@ dist.jar=${dist.dir}/CPE552InClass2019F.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CPE552InClass2019F
+endorsed.classpath=
 excludes=
+file.reference.core.jar=libs/core.jar
+file.reference.gluegen-rt-natives-linux-aarch64.jar=libs/gluegen-rt-natives-linux-aarch64.jar
+file.reference.gluegen-rt-natives-linux-amd64.jar=libs/gluegen-rt-natives-linux-amd64.jar
+file.reference.gluegen-rt-natives-linux-armv6hf.jar=libs/gluegen-rt-natives-linux-armv6hf.jar
+file.reference.gluegen-rt-natives-linux-i586.jar=libs/gluegen-rt-natives-linux-i586.jar
+file.reference.gluegen-rt-natives-macosx-universal.jar=libs/gluegen-rt-natives-macosx-universal.jar
+file.reference.gluegen-rt-natives-windows-amd64.jar=libs/gluegen-rt-natives-windows-amd64.jar
+file.reference.gluegen-rt-natives-windows-i586.jar=libs/gluegen-rt-natives-windows-i586.jar
+file.reference.gluegen-rt.jar=libs/gluegen-rt.jar
+file.reference.jogl-all-natives-linux-aarch64.jar=libs/jogl-all-natives-linux-aarch64.jar
+file.reference.jogl-all-natives-linux-amd64.jar=libs/jogl-all-natives-linux-amd64.jar
+file.reference.jogl-all-natives-linux-armv6hf.jar=libs/jogl-all-natives-linux-armv6hf.jar
+file.reference.jogl-all-natives-linux-i586.jar=libs/jogl-all-natives-linux-i586.jar
+file.reference.jogl-all-natives-macosx-universal.jar=libs/jogl-all-natives-macosx-universal.jar
+file.reference.jogl-all-natives-windows-amd64.jar=libs/jogl-all-natives-windows-amd64.jar
+file.reference.jogl-all-natives-windows-i586.jar=libs/jogl-all-natives-windows-i586.jar
+file.reference.jogl-all.jar=libs/jogl-all.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.core.jar}:\
+    ${file.reference.gluegen-rt-natives-linux-aarch64.jar}:\
+    ${file.reference.gluegen-rt-natives-linux-amd64.jar}:\
+    ${file.reference.gluegen-rt-natives-linux-armv6hf.jar}:\
+    ${file.reference.gluegen-rt-natives-linux-i586.jar}:\
+    ${file.reference.gluegen-rt-natives-macosx-universal.jar}:\
+    ${file.reference.gluegen-rt-natives-windows-amd64.jar}:\
+    ${file.reference.gluegen-rt-natives-windows-i586.jar}:\
+    ${file.reference.gluegen-rt.jar}:\
+    ${file.reference.jogl-all-natives-linux-aarch64.jar}:\
+    ${file.reference.jogl-all-natives-linux-amd64.jar}:\
+    ${file.reference.jogl-all-natives-linux-armv6hf.jar}:\
+    ${file.reference.jogl-all-natives-linux-i586.jar}:\
+    ${file.reference.jogl-all-natives-macosx-universal.jar}:\
+    ${file.reference.jogl-all-natives-windows-amd64.jar}:\
+    ${file.reference.jogl-all-natives-windows-i586.jar}:\
+    ${file.reference.jogl-all.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
