--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ lib/build/
 /InClassProjets2019S/build/
 /WebDev2019S/Session13/nbproject/private/
 /WebDev2019S/Session13/build/
+/CPE552InClass2019F/nbproject/private/
+/CPE552InClass2019F/build/
