complete final review, threading

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ lib/build/
 /WebDev2019S/Session13/build/
 /CPE552InClass2019F/nbproject/private/
 /CPE552InClass2019F/build/
+/2020S/NewFolder/session10/nbproject/private/
+/2020S/Session11/Session11/nbproject/private/
+/2020S/Session11/Session11/build/
+/2020S/Session12/Session12/nbproject/private/
+/2020S/Session12/Session12/build/
+/2020S/SimpleClasses/nbproject/private/
