added data dir with sample calendar

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ lib/build/
 /WebDev2019S/Session13/build/
 /CPE552InClass2019F/nbproject/private/
 /CPE552InClass2019F/build/
+/2020S/Session07/nbproject/private/
