review of midterm, AirSim

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ lib/build/
 /2020S/Session12/Session12/nbproject/private/
 /2020S/Session12/Session12/build/
 /2020S/SimpleClasses/nbproject/private/
+/f2021/target/
